@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+ * Added a `--tracks` option to `generate-names.pl` that allows users
+   to manually specify which tracks will be indexed to enable
+   autocompletion and searching for their feature names in the JBrowse
+   location box.  Thanks to Steffi Geisen for her ongoing help in
+   enhancing the scalability of name indexing.
+
  * Fixed off-by-one error in Wiggle track display code: wiggle data
    was incorrectly displayed shifted one base to the left of its
    proper position.  Thanks to Steffi Geisen for noticing this.
